--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <nav id="nav">
         <a href="#home">HOME</a>
         <a href="#about">ABOUT</a>
-        <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
     </nav>
     <!-- Home Section -->
@@ -40,8 +39,8 @@
         <h1>Keep Connected</h1>
         <div class="about-container">
             <div class="image-container">
-                <h2>Meet People</h2>
-                <img src="img/undraw_project_completed_light.svg" alt="Proud Coder" id="image1">
+                <h2>Follow People</h2>
+                <img src="img/undraw_subscriptions_light.svg" alt="Proud Coder" id="image1">
             </div>
             <div class="image-container">
                 <h2>Chat</h2>
@@ -51,21 +50,6 @@
                 <h2>Make Friends</h2>
                 <img src="img/undraw_social_networking_light.svg" alt="Idea" id="image3">
             </div>
-        </div>
-    </section>
-    <!-- Projects Section -->
-    <section id="projects">
-        <h1>Buttons</h1>
-        <div class="buttons">
-            <button class="primary">Primary</button>
-            <button class="secondary">Secondary</button>
-            <button class="primary" disabled>Disabled</button>
-            <button class="outline">Outline</button>
-            <button class="secondary outline">Alt Outline</button>
-            <button class="outline" disabled>Disabled</button>
-        </div>
-        <div class="text-box" id="text-box">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, minima. Exercitationem mollitia corporis expedita suscipit qui, sapiente odit iste, magnam maiores ipsum unde repellendus accusantium quia pariatur eligendi nulla fuga!</p>
         </div>
     </section>
     <!-- Contact Section -->
